tests/checker/bad/namespace1.scilla
scilla_version 0

(* Importing as "Barr" but using as "Bar" *)
import TestLib1 as Barr

library NS

let foo = Bar.sort_uint32

contract TestContr1
()
